--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -4,7 +4,7 @@
 
         <mat-expansion-panel [expanded]="panelOpenState">
 
-            <mat-expansion-panel-header collapsedHeight="2rem" expandedHeight="2rem">
+            <mat-expansion-panel-header>
                 <mat-panel-title><span [innerText]="panelMessage()"></span></mat-panel-title>
                 <mat-panel-description></mat-panel-description>
             </mat-expansion-panel-header>
