--- a/src/app/events-list/events-list.component.html
+++ b/src/app/events-list/events-list.component.html
@@ -1,4 +1,12 @@
-<div class="mat-elevation-z8 mat-expansion-panel" style="background-color: white">
+<mat-accordion>
+
+    <mat-expansion-panel [expanded]="panelOpenState">
+
+        <mat-expansion-panel-header>
+            <mat-panel-title><span [innerText]="panelMessage()"></span></mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+        </mat-expansion-panel-header>
+
 
     <div class="search-div">
         <mat-form-field color='primary' style="width: 50%;">
@@ -43,8 +51,8 @@
 
     </mat-table>
 
-
     <mat-paginator [pageSizeOptions]="[5, 10, 50, 100, 500]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 
+    </mat-expansion-panel>
 
-</div>
+</mat-accordion>
