--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,13 @@
     <span>Ethereum Event Scan</span>
 </mat-toolbar>
 
+<!-- Right side -->
+<a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">
+    <img style="position: absolute; top: 0px; right: 0px; border: 0; width: 8rem"
+         src="../assets/github.png"
+         alt="Fork me on GitHub">
+</a>
+
 <!-- Main content -->
 <div class="row">
     <div class="col-12">
