- update README.md - fix lint warnings - replace screenshots

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<mat-toolbar color="primary" class="header" >
+<mat-toolbar class="header" color="primary">
     <span>Ethereum Event Scan</span>
 </mat-toolbar>
 
-<!-- Right side -->
-<a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">
-    <img style="position: absolute; top: 0px; right: 0px; border: 0; width: 8rem"
-         src="../assets/github.png"
-         alt="Fork me on GitHub">
+<!-- Right side --><a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">
+    <img alt="Fork me on GitHub" src="../assets/github.png" style="position: absolute; top: 0px; right: 0px; border: 0; width: 8rem">
 </a>
 
 <!-- Main content -->
