- fix IntelliJ analysis warnings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 
 <!-- Right side --><a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">
-    <img alt="Fork me on GitHub" src="../assets/github.png" style="position: absolute; top: 0px; right: 0px; border: 0; width: 8rem">
+    <img alt="Fork me on GitHub" src="../assets/github.png" style="position: absolute; top: 0; right: 0; border: 0; width: 8rem">
 </a>
 
 <!-- Main content -->
