--- a/src/app/details/info-modal.component.html
+++ b/src/app/details/info-modal.component.html
@@ -5,5 +5,5 @@
 <div [innerHTML]="data.content" mat-dialog-content></div>
 
 <div mat-dialog-actions>
-    <button (click)="onCloseClick()" color="primary" mat-button>Schließen</button>
+    <button (click)="onCloseClick()" color="primary" mat-button>Close</button>
 </div>
