--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -10,28 +10,28 @@
             </mat-expansion-panel-header>
 
             <mat-form-field style="width: 100%;">
-                <input (change)="updateStartValue()" [value]="startBlock" formControlName="startBlock" id="startBlock" matInput placeholder="Start" type="text">
+                <label for="startBlock"></label><input (change)="updateStartValue()" [value]="startBlock" formControlName="startBlock" id="startBlock" matInput placeholder="Start" type="text">
                 <button (click)="startBlock='0'" *ngIf="startBlock" aria-label="Clear" mat-button mat-icon-button matSuffix>
                     <mat-icon>x</mat-icon>
                 </button>
             </mat-form-field>
 
             <mat-form-field style="width: 100%;">
-                <input (change)="updateEndValue()" [value]="endBlock" formControlName="endBlock" id="endBlock" matInput placeholder="End" type="text">
+                <label for="endBlock"></label><input (change)="updateEndValue()" [value]="endBlock" formControlName="endBlock" id="endBlock" matInput placeholder="End" type="text">
                 <button (click)="endBlock='latest'" *ngIf="endBlock" aria-label="Clear" mat-button mat-icon-button matSuffix>
                     <mat-icon>x</mat-icon>
                 </button>
             </mat-form-field>
 
             <mat-form-field style="width: 100%;">
-                <input (change)="updateProviderValue()" [value]="provider" formControlName="provider" id="provider" matInput placeholder="Provider" type="text">
+                <label for="provider"></label><input (change)="updateProviderValue()" [value]="provider" formControlName="provider" id="provider" matInput placeholder="Provider" type="text">
                 <button (click)="provider='http://127.0.0.1:8545'" *ngIf="provider" aria-label="Clear" mat-button mat-icon-button matSuffix>
                     <mat-icon>x</mat-icon>
                 </button>
             </mat-form-field>
 
             <mat-form-field style="width: 100%;">
-                <input (change)="updateContractValue()" [value]="contract" formControlName="contract" id="contract" matInput placeholder="Contract" type="text">
+                <label for="contract"></label><input (change)="updateContractValue()" [value]="contract" formControlName="contract" id="contract" matInput placeholder="Contract" type="text">
                 <button (click)="contract=''" *ngIf="contract" aria-label="Clear" mat-button mat-icon-button matSuffix>
                     <mat-icon>x</mat-icon>
                 </button>
@@ -39,8 +39,8 @@
 
 
             <mat-form-field style="width: 100%;">
-                <textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()" [cdkAutosizeMaxRows]="noOfRowsAbi" [value]="abi" appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize formControlName="abi"
-                          id="abi" matInput placeholder="Abi" spellcheck="false" type="text"></textarea>
+                <label for="abi"></label><textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()" [cdkAutosizeMaxRows]="noOfRowsAbi" [value]="abi" appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize formControlName="abi"
+                                                   id="abi" matInput placeholder="Abi" spellcheck="false" type="text"></textarea>
                 <button (click)="abi=''" *ngIf="abi" aria-label="Clear" mat-button mat-icon-button matSuffix>
                     <mat-icon>x</mat-icon>
                 </button>
